Change slider background gradient colors

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             width: 100%;
             height: 15px;
             border-radius: 10px;
-            background: linear-gradient(to right, var(--red), var(--green-blue), var(--blue));
+            background: linear-gradient(to right, var(--green), var(--green-blue), var(--blue));
             outline: none;
             -webkit-appearance: none;
             margin: 2rem 0;
