Change color indicator background from #F4CAF50 to #4CAF50

--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
 
 
                     <div class="ph-label">
-                        <div class="color-indicator" style="background: #F4CAF50;"></div>
+                        <div class="color-indicator" style="background: #4CAF50;"></div>
                         <span data-lang-id="pH 6-7" data-lang-en="pH 6-7">pH 6-7</span>
                         <small data-lang-id="Segar" data-lang-en="Fresh">Segar</small>
                     </div>
