--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             --light-bg: #F1F8E9;
             --text-dark: #2E7D32;
             --text-light: #666;
-            --green: #4CAF50;
+            --red: ##F44336;
             --yellow: #FFC107;
             --blue: #0724a2;
             --green-blue: #1bab9a;
@@ -250,7 +250,7 @@
             width: 100%;
             height: 15px;
             border-radius: 10px;
-            background: linear-gradient(to right, var(--green), var(--green-blue), var(--blue));
+            background: linear-gradient(to right, var(--red), var(--green-blue), var(--blue));
             outline: none;
             -webkit-appearance: none;
             margin: 2rem 0;
@@ -590,7 +590,7 @@
 
 
                     <div class="ph-label">
-                        <div class="color-indicator" style="background: #4CAF50;"></div>
+                        <div class="color-indicator" style="background: #F44336;"></div>
                         <span data-lang-id="pH 6-7" data-lang-en="pH 6-7">pH 6-7</span>
                         <small data-lang-id="Segar" data-lang-en="Fresh">Segar</small>
                     </div>
@@ -805,10 +805,10 @@ function toggleLanguage() {
             
             if (ph <= 7.9) {
                 status = currentLang === 'id' ? 'SEGAR' : 'FRESH';
-                statusBg = '#4CAF50';
+                statusBg = '#F44336';
                 colorFilter = 'hue-rotate(0deg) saturate(1.2)';
                 statusText.innerHTML = `<span data-lang-id="SEGAR - Aman Dikonsumsi" data-lang-en="FRESH - Safe to Consume">${currentLang === 'id' ? 'SEGAR - Aman Dikonsumsi' : 'FRESH - Safe to Consume'}</span>`;
-                statusText.style.color = '#4CAF50';
+                statusText.style.color = '#F44336';
             } else if (ph >= 10) {
                 status = currentLang === 'id' ? 'TIDAK LAYAK' : 'NOT SUITABLE';
                 statusBg = '#0724a2';
