Fix typo in red color variable definition

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             --light-bg: #F1F8E9;
             --text-dark: #2E7D32;
             --text-light: #666;
-            --red: ##F44336;
+            --red: #F44336;
             --yellow: #FFC107;
             --blue: #0724a2;
             --green-blue: #1bab9a;
